--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 shadowJar {
     archiveBaseName.set('shadow')
     archiveVersion.set('1.0')
+
 }
 
 compileJava   {
@@ -23,6 +24,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.yamakassi.Main'
     }
+    zip64(true)
 }
 
 test {
